--- a/package.json
+++ b/package.json
@@ -19,10 +19,15 @@
     "framer-motion": "^10.10.0",
     "qrcode": "^1.5.3",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-icons": "^4.8.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "styled-components": "^5.3.9",
     "twin": "^0.0.1",
     "twin.macro": "^3.3.0",
