--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.10.6",
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
+    "@iconscout/react-unicons": "^2.0.2",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -24,11 +25,16 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
+    "react-input-emoji": "^5.0.2",
     "react-modal": "^3.16.1",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "socket.io-client": "^4.6.1",
     "styled-components": "^5.3.9",
+    "timeago": "^1.6.7",
+    "timeago.js": "^4.0.2",
     "twin": "^0.0.1",
     "twin.macro": "^3.3.0",
     "web-vitals": "^2.1.4"
