--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
     "@iconscout/react-unicons": "^2.0.2",
+    "@material-tailwind/react": "^2.0.1",
+    "@material/dialog": "^14.0.0",
     "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.12.0",
+    "@mui/material": "^5.13.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
